# ChessBot

./: .gitignore  BUILD_INSTRUCTIONS.md  CMakeLists.txt  PROJECT_STRUCTURE.md  README.md  REFACTORING_SUMMARY.md  bitboard.cpp  bitboard.h  board.cpp  build.bat  eval.cpp  eval.h  generate_book_v3.py  generate_clean_dataset.py  generate_massive_dataset.py  generate_pro_dataset.py  generate_trainings_stockfish.py  main.cpp  model.pth  movegenerator.h  simple_tuner.py  train_nnue.py  types.h
include/: board.h  book.h  eval.h  movegenerator.h  nnue_weights.h  search.h  selfplay.h  tt.h  uci.h  zobrist.h
src/: board.cpp  book.cpp  eval.cpp  main.cpp  movegenerator.cpp  nnue.cpp  search.cpp  selfplay.cpp  tt.cpp  uci.cpp  zobrist.cpp
